--- a/src/app/components/products/physical/excelsheet-update/excelsheet.component.html
+++ b/src/app/components/products/physical/excelsheet-update/excelsheet.component.html
@@ -1,4 +1,4 @@
-<p>Importacion de Productos</p>
+<p>Actualizar Productos</p>
 
 <div class="row">
   <div class="col-8">
@@ -6,7 +6,7 @@
       <input type="file" (change)="onFileChange($event)" multiple="false" />
     </label>
   </div>
-  
+
   <div *ngIf="data" class="progress my-3">
     <div
       class="progress-bar progress-bar-info progress-bar-striped"
