change and new endpoint

--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -138,7 +138,7 @@
                   </ng-template>
                 </ngb-tab>
                 <ngb-tab>
-                  <ng-template ngbTabTitle
+                  <!-- <ng-template ngbTabTitle
                     ><i class="icon-unlock mr-2"></i> Registrar
                     <ng-template ngbTabContent>
                       <form
@@ -193,7 +193,7 @@
                         </div>
                       </form>
                     </ng-template>
-                  </ng-template>
+                  </ng-template> -->
                 </ngb-tab>
               </ngb-tabset>
             </div>
