--- a/src/app/components/sales/orders/orders.component.html
+++ b/src/app/components/sales/orders/orders.component.html
@@ -19,9 +19,9 @@
         <label class="col-12 mb-0 pl-0 item-label font-weight-600"
           >Cliente</label
         >
-        <span class="col pl-0 font-weight-600 item-value font-weight-500">{{
+        <!-- <span class="col pl-0 font-weight-600 item-value font-weight-500">{{
           item.customer.firstName
-        }}</span>
+        }}</span> -->
       </div>
       <div class="p-0 m-0 col">
         <label class="col-12 mb-0 pl-0 item-label font-weight-600">Fecha</label>
