--- a/src/app/components/reports/reports.component.html
+++ b/src/app/components/reports/reports.component.html
@@ -1,5 +1,5 @@
 <!-- Container-fluid starts-->
-<div class="container-fluid">
+<!-- <div class="container-fluid">
     <div class="row">
         <div class="col-xl-8 col-md-6">
             <div class="card">
@@ -75,5 +75,5 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- Container-fluid Ends-->
