done by cristian

--- a/src/app/components/invoice/invoice.component.html
+++ b/src/app/components/invoice/invoice.component.html
@@ -53,7 +53,7 @@
           (click)="onSumit(item)"
         >
           <i class="fa fa-eye u-smallSize"></i>
-          <label class="m-0 ml-3 u-smallerSize"> Ver</label>
+          <label class="m-0 ml-3 u-smallerSize"> Exportar </label>
         </button>
       </div>
     </article>
