--- a/src/app/components/users/list-user/list-user.component.html
+++ b/src/app/components/users/list-user/list-user.component.html
@@ -39,25 +39,16 @@
         }}</span>
       </div>
 
-      <div class="p-0 m-0 col">
+      <div class="p-0 m-2 col">
         <button
           class="btn btn-light d-flex justify-content-center align-items-center flex-row"
           (click)="onSumit(item)"
         >
           <i class="fa fa-eye u-smallSize"></i>
-          <label class="m-0 ml-3 u-smallerSize"> Ver</label>
+          <label class="m-0 ml-3 u-smallerSize"> Actualizar</label>
         </button>
       </div>
-      <!-- <div class="p-0 m-0 col">
-        <button
-          class="btn btn-light d-flex justify-content-center align-items-center flex-row"
-          (click)="activate()"
-        >
-          <i class="fa fa-list-alt u-smallSize"></i>
-          <label class="m-0 ml-2 u-smallerSize">Activar Usuario</label>
-        </button>
-      </div> -->
-      <div class="p-0 m-0 col-2">
+      <div class="p-0 m-2 col-2">
         <button
           class="align-items-center btn btn-light d-flex justify-content-center row"
           (click)="activate(item)"
