--- a/src/app/components/products/physical/product-list/product-list.component.html
+++ b/src/app/components/products/physical/product-list/product-list.component.html
@@ -36,8 +36,8 @@
           class="align-items-center btn btn-light d-flex justify-content-center row"
           (click)="Delete(item)"
         >
-        <i class="icon-trash ml-1 p-1"></i>
-          <label class="m-0 mr-4 u-smallerSize"> elimiar</label>
+          <i class="icon-trash ml-1 p-1"></i>
+          <label class="m-0 mr-4 u-smallerSize"> eliminar</label>
         </button>
       </div>
 
@@ -46,7 +46,7 @@
           class="align-items-center btn btn-light d-flex justify-content-center row"
           (click)="Delete(item)"
         >
-        <i class="icon-pencil-alt ml-1 p-1"></i>
+          <i class="icon-pencil-alt ml-1 p-1"></i>
           <label class="m-0 mr-4 u-smallerSize"> editar</label>
         </button>
       </div>
