--- a/src/app/components/users/list-user/user-modal/user-modal.component.html
+++ b/src/app/components/users/list-user/user-modal/user-modal.component.html
@@ -21,6 +21,17 @@
     >
       <h4>Detalles de la cuenta</h4>
       <div class="form-group col-12">
+        <label for="validationCustom1" class="col-xl-3 col-md-4"
+          ><span>*</span> Nombre de la empresa
+        </label>
+        <input
+          class="form-control col-xl-8 col-md-7"
+          id="validationCustom1"
+          type="text"
+          formControlName="companyName"
+        />
+      </div>
+      <div class="form-group col-12">
         <label for="validationCustom0" class="col-xl-3 col-md-4"
           ><span>*</span> Ciudad</label
         >
@@ -40,6 +51,17 @@
           id="validationCustom1"
           type="text"
           formControlName="state"
+        />
+      </div>
+      <div class="form-group col-12">
+        <label for="validationCustom4" class="col-xl-3 col-md-4"
+          ><span>*</span> Direccion</label
+        >
+        <input
+          class="form-control col-xl-8 col-md-7"
+          id="validationCustom4"
+          type="text"
+          formControlName="address"
         />
       </div>
       <div class="form-group col-12">
@@ -83,7 +105,7 @@
           class="form-control col-xl-8 col-md-7"
           id="validationCustom4"
           type="text"
-          formControlName="phone"
+          formControlName="phoneGerente"
         />
       </div>
       <div class="form-group col-12">
