--- a/src/app/components/sales/orderLists/orderLists.component.html
+++ b/src/app/components/sales/orderLists/orderLists.component.html
@@ -1,44 +1,71 @@
-<div class="container-fluid">
-  <section class="overflow-auto">
-    <article
-      class="p-0 m-0 row d-flex flex-nowrap flex-row py-3 my-4 item-card full-width"
-      *ngFor="let item of order"
-    >
-
-      <div class="p-0 m-0 col">
-        <label class="col-12 mb-0 pl-0 item-label font-weight-600">Producto</label>
-        <span class="col-12 pl-0 font-weight-600 item-value font-weight-500">{{
-        item.nameProduct
-        }}</span>
+<div class="container">
+  <div class="row mt-5">
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-header">
+          <h3>Productos de la ordenes</h3>
+        </div>
+        <div class="card-body">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Producto</th>
+                <th>Unidad</th>
+                <th>Cantidad</th>
+              </tr>
+            </thead>
+            <tbody *ngFor="let item of order.totalInfo">
+              <tr>
+                <td>
+                  {{ item.nameProduct }}
+                </td>
+                <td>
+                  {{ item.productType }}
+                </td>
+                <td>
+                  {{ item.totalQty }}
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
-
-
-      <div class="p-0 m-0 col">
-        <label class="col-12 mb-0 pl-0 item-label font-weight-600"
-          >Total</label
-        >
-        <span class="col-12 pl-0 font-weight-600 item-value font-weight-500">{{
-          item.totalProduct
-        }}</span>
+    </div>
+    <div class="col-sm-8 text-center">
+      <div class="card">
+        <div class="card-header">
+          <h3>Ordenes</h3>
+        </div>
+        <div class="card-body">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Producto</th>
+                <th>Unidad</th>
+                <th>Cantidad</th>
+                <th>Cliente</th>
+              </tr>
+            </thead>
+            <tbody *ngFor="let item of order.orderInfo">
+              <tr>
+                <td>
+                  {{ item.nameProduct }}
+                </td>
+                <td>
+                  {{ item.productType }}
+                </td>
+                <td>
+                  {{ item.totalProduct }}
+                </td>
+                 <td>
+                  {{ item.nameCustomer }}
+                </td>
+                
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
-
-      <div class="p-0 m-0 col-3">
-        <label class="col-12 mb-0 pl-0 item-label font-weight-600"
-          >Cliente</label
-        >
-         <span class="col pl-0 font-weight-600 item-value font-weight-500">{{
-          item.nameCustomer
-        }}</span>
-      </div>
-
-      <div class="p-0 m-0 col">
-        <label class="col-12 mb-0 pl-0 item-label font-weight-600"
-          >Producto cliente</label
-        >
-        <span class="col-12 pl-0 font-weight-600 item-value font-weight-500">{{
-          item.totalProductCustomer
-        }}</span>
-      </div>
-    </article>
-  </section>
+    </div>
+  </div>
 </div>
