--- a/src/app/components/sales/orders/orders.component.html
+++ b/src/app/components/sales/orders/orders.component.html
@@ -14,14 +14,23 @@
           {{ item.isActive ? "Abierta" : "Cerrada " }}
         </span>
       </div>
+
       <!-- customer -->
       <div class="p-0 m-0 col-3">
         <label class="col-12 mb-0 pl-0 item-label font-weight-600"
           >Cliente</label
         >
-         <span class="col pl-0 font-weight-600 item-value font-weight-500">{{
+        <span class="col pl-0 font-weight-600 item-value font-weight-500">{{
           item.companyName
-        }}</span> 
+        }}</span>
+      </div>
+      <div class="p-0 m-0 col-3">
+        <label class="col-12 mb-0 pl-0 item-label font-weight-600"
+          >Tipo de orden</label
+        >
+        <span class="col pl-0 font-weight-600 item-value font-weight-500">
+          {{ item.isExpress ? "Exprés" : "Normal" }}
+        </span>
       </div>
       <div class="p-0 m-0 col">
         <label class="col-12 mb-0 pl-0 item-label font-weight-600">Fecha</label>
